--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.stateContainer{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.selectStyle{
+  fontSize: 16px;
+    padding: 10px;
+    margin: 5px;
+    minWidth: 200px;
+}
+.selectStyle1{
+  fontSize: 16px;
+    padding: 10px;
+    margin: 5px;
+    width: 200px;
+}
+.selectStyle2{
+  fontSize: 16px;
+    padding: 10px;
+    margin: 5px;
+    Width: 200px;
 }
